Fix: Bootstrap 4 integration - removed `nowrap` styling from the table information text, as it could result in horizontal scrolling on mobile
DD-1559

Sync to source repo @d667fc5629e3c1bf4eadedb75f03d8544df23dfe

--- a/css/dataTables.bootstrap4.css
+++ b/css/dataTables.bootstrap4.css
@@ -44,7 +44,6 @@ div.dataTables_wrapper div.dataTables_filter input {
 }
 div.dataTables_wrapper div.dataTables_info {
   padding-top: 0.85em;
-  white-space: nowrap;
 }
 div.dataTables_wrapper div.dataTables_paginate {
   margin: 0;
